--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+     "start:prod": "NODE_ENV=production ENV_FILE=.env.prod next start"
   },
   "dependencies": {
     "@d-id/client-sdk": "^1.0.19-beta.155",
