--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-     "start:prod": "NODE_ENV=production ENV_FILE=.env.prod next start"
+    "start:prod": "NODE_ENV=production ENV_FILE=.env.prod next start"
   },
   "dependencies": {
     "@d-id/client-sdk": "^1.0.19-beta.155",
@@ -35,6 +35,7 @@
     "mongodb": "^6.13.1",
     "mongoose": "^8.9.5",
     "next": "14.2.15",
+    "papaparse": "^5.5.2",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
@@ -42,6 +43,7 @@
     "react-hook-form": "^7.53.1",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
     "yahoo-finance2": "^2.13.3",
     "zod": "^3.23.8",
     "zustand": "^5.0.3"
@@ -51,6 +53,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
