--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-pdf/renderer": "^4.2.2",
     "@types/dompurify": "^3.2.0",
     "@types/mongodb": "^4.0.6",
+    "@types/puppeteer": "^7.0.4",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.0",
@@ -38,6 +39,8 @@
     "mongoose": "^8.9.5",
     "next": "14.2.15",
     "papaparse": "^5.5.2",
+    "puppeteer": "^24.4.0",
+    "puppeteer-core": "^24.4.0",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
