--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "react-markdown": "^8.0.7",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^1.0.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "xlsx": "^0.18.5",
