--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-saver": "^2.0.5",
     "formidable": "^3.5.2",
     "framer-motion": "^12.0.6",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.451.0",
     "marked": "^15.0.7",
     "mongodb": "^6.13.1",
