--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-pdf/renderer": "^4.2.2",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/dompurify": "^3.2.0",
     "@types/mongodb": "^4.0.6",
     "@types/puppeteer": "^7.0.4",
