--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-polly": "^3.787.0",
+    "@aws-sdk/client-transcribe-streaming": "^3.787.0",
     "@d-id/client-sdk": "^1.0.19-beta.155",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
@@ -25,6 +27,8 @@
     "@types/dompurify": "^3.2.0",
     "@types/mongodb": "^4.0.6",
     "@types/puppeteer": "^7.0.4",
+    "@types/ws": "^8.18.1",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.0",
@@ -32,6 +36,7 @@
     "diff": "^7.0.0",
     "dompurify": "^3.2.4",
     "file-saver": "^2.0.5",
+    "fluent-ffmpeg": "^2.1.3",
     "formidable": "^3.5.2",
     "framer-motion": "^12.0.6",
     "jspdf": "^3.0.1",
@@ -39,6 +44,7 @@
     "marked": "^15.0.7",
     "mongodb": "^6.13.1",
     "mongoose": "^8.9.5",
+    "multiparty": "^4.2.3",
     "next": "14.2.15",
     "papaparse": "^5.5.2",
     "puppeteer": "^24.4.0",
@@ -53,17 +59,22 @@
     "recharts": "^2.15.2",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^1.0.0",
+    "stream": "^0.0.3",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
+    "ws": "^8.18.1",
     "xlsx": "^0.18.5",
     "yahoo-finance2": "^2.13.3",
     "zod": "^3.23.8",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@types/bun": "^1.2.10",
     "@types/diff": "^7.0.1",
     "@types/file-saver": "^2.0.7",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/formidable": "^3.4.5",
+    "@types/multiparty": "^4.2.1",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.15",
     "@types/react": "^18",
