--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
+    "react-gauge-chart": "^0.5.1",
     "react-hook-form": "^7.53.1",
     "react-markdown": "^8.0.7",
     "react-pdf": "^9.2.1",
@@ -79,6 +80,7 @@
     "@types/papaparse": "^5.3.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-gauge-chart": "^0.4.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
