--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "@types/multiparty": "^4.2.1",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.15",
+    "@types/pdf-parse": "^1.1.5",
+    "@types/pdfjs-dist": "^2.10.378",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-gauge-chart": "^0.4.3",
