--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_URI=mongodb+srv://etoro:6jEMvm7S93zweMAU@cluster0.ulyak.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+NEXT_PUBLIC_API_BASE_URL='https://stagingapi.neuralseek.com/v1'
+CUSTOMER_SUPPORT_CHATBOT_API_KEY='0c828089-d6359503-aea41b37-6f3d42fa'
