--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://etoro:6jEMvm7S93zweMAU@cluster0.ulyak.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3000/demos-page/api
