--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "formidable": "^3.5.2",
     "framer-motion": "^12.0.6",
+    "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.451.0",
     "marked": "^15.0.7",
