--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "stream": "^0.0.3",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "ws": "^8.18.1",
     "xlsx": "^0.18.5",
     "yahoo-finance2": "^2.13.3",
